force-app/main/default/objects/Patient__c/fields/Birthday_date__c.field-meta.xml
<CustomField>
    <fullName>Birthday_date__c</fullName>
    <label>Birthday date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>